Fix overflow bug

--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,7 @@ body {
   color: white;
   width: 100vw;
   height: 100vh;
+  overflow-x: hidden;
 }
 
 nav {
